[package]
name = "spinners-rs"
description = "A lightweight Spinner library for Rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.31"
