[package]
name = "spinners-rs"
authors = ["Juliette Cordor"]
categories = ["command-line-interface"]
homepage = "https://github.com/jewlexx/spinners-rs"
documentation = "https://docs.rs/spinners-rs"
include = ["src/**/*", "README.md"]
keywords = ["spinner", "spin", "loader", "term", "terminal"]
license = "MIT"
repository = "https://github.com/jewlexx/spinners-rs.git"
description = "A lightweight Spinner library for Rust"
version = "2.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
colored = "2.0.0"
