[package]
name = "spinners-node"
version = "1.0.0"
authors = ["Juliette Cordor"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spinners-rs = { version = "2.2.3", path = ".." }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
